# trader-tony-v4

./: .dockerignore  .env.example  .gitignore  2026-01-14-this-session-is-being-continued-from-a-previous-co.txt  CLAUDE_CODE_TASKS.md  CLAUDE_CODE_TASKS_2.md  Cargo.toml  Dockerfile  PLAN.md  README.md  REPO_STATUS.md  SKILL.md  TODO.md  V5_Migration_Plan.md  api.md  deployment.md  fly.toml  railway.toml  strategy.md  test_holders.py  test_moralis_api.py  test_moralis_final.py  test_moralis_quick.py  tmpclaude-8a31-cwd  trader-tony-v4-status-report.md
.claude/: settings.local.json
.github/workflows/: ci.yml  fly-deploy.yml
docs/: TOKEN_DISCOVERY_REDESIGN.md
src/: config.rs  error.rs  main.rs
src/api/: birdeye.rs  helius.rs  jupiter.rs  mod.rs  moralis.rs  telegram.rs
src/bot/: commands.rs  keyboards.rs  mod.rs  notification.rs
src/models/: copy_trade.rs  mod.rs  simulated_position.rs  token.rs  user.rs
src/solana/: client.rs  mod.rs  wallet.rs
src/trading/: autotrader.rs  graduation_monitor.rs  mod.rs  position.rs  pumpfun.rs  pumpfun_monitor.rs  risk.rs  scanner.rs  simulation.rs  sniper.rs  strategy.rs  watchlist.rs
src/web/: copy_trade.rs  handlers.rs  mod.rs  models.rs  routes.rs  server.rs  websocket.rs
webapp/: index.html  vercel.json
webapp/css/: styles.css  terminal.css
webapp/js/: api.js  app.js  chart.js  config.js  wallet.js  websocket.js
