[package]
name = "trader-tony-v4"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Autonomous trading bot for Solana memecoins with risk analysis"

[dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }

# Solana
solana-sdk = "1.17"
solana-client = "1.17"
solana-account-decoder = "1.17"
spl-token = "3.5.0" # Compatible with solana-sdk 1.17
spl-token-2022 = "0.6.1" # Compatible with solana-sdk 1.17
solana-program = "1.17" # Compatible with solana-sdk 1.17
solana-transaction-status = "1.17" # Provides transaction detail types
spl-associated-token-account = "2.3.0" # Added for ATA calculation
bs58 = "0.5.0" # Updated version, needed for base58 decoding
bincode = "1.3.3" # Needed for transaction deserialization

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21" # Needed for base64 decoding

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = "0.3"
rand = "0.8"
lazy_static = "1.4"

# Storage
sled = "0.34"  # Embedded database

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.1"
# bs58 is already in main dependencies